authentication controller code added
